k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chiara-app
  labels:
    name: chiara-app
