k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chiara-react-app-service
  namespace: chiara-app
  labels:
    app: chiara-react-app
spec:
  type: ClusterIP
  selector:
    app: chiara-react-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
