k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chiara-react-app-ingress
  namespace: chiara-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: chiara-app-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - chiaraaiconsulting.se
        - www.chiaraaiconsulting.se
      secretName: chiara-tls-secret
  rules:
    - host: chiaraaiconsulting.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chiara-react-app-service
                port:
                  number: 80
    - host: www.chiaraaiconsulting.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chiara-react-app-service
                port:
                  number: 80
